Chỉnh sửa cấu hình môi trường, cập nhật đường dẫn trong HTML, cải thiện định dạng CSS và thêm chức năng cập nhật trạng thái menu trong controller. Cập nhật middleware xác thực để hỗ trợ tài khoản admin.

--- a/public/reservation.html
+++ b/public/reservation.html
@@ -25,7 +25,7 @@
   <header class="header">
     <div class="container">
       <div class="logo-container">
-        <a href="/index.html">
+        <a href="./index.html">
           <img src="./assets/images/logo.svg" alt="Grill Restaurant" class="auth-logo" />
         </a>
       </div>
