--- a/public/index.html
+++ b/public/index.html
@@ -364,10 +364,10 @@
             </li>
           </ul>
 
-          <img src="/assets/images/shape-1.png" width="246" height="412" loading="lazy" alt="shape"
+          <!-- <img src="/assets/images/shape-1.png" width="246" height="412" loading="lazy" alt="shape"
             class="shape shape-1 move-anim" />
           <img src="/assets/images/shape-2.png" width="343" height="345" loading="lazy" alt="shape"
-            class="shape shape-2 move-anim" />
+            class="shape shape-2 move-anim" /> -->
         </div>
       </section>
 
@@ -471,155 +471,7 @@
 
           <h2 class="headline-1 section-title text-center">Delicious Menu</h2>
 
-          <ul class="grid-list">
-            <li>
-              <div class="menu-card hover:card">
-                <figure class="card-banner img-holder" style="--width: 100; --height: 100">
-                  <img src="./assets/images/menu-1.png" width="100" height="100" loading="lazy" alt="Greek Slad"
-                    class="img-cover" />
-                </figure>
-
-                <div>
-                  <div class="title-wrapper">
-                    <h3 class="title-3">
-                      <a href="" class="card-title">Greek Salad</a>
-                    </h3>
-
-                    <span class="badge label-1">Seasonal</span>
-
-                    <span class="span title-2">$25.50</span>
-
-                    <p class="card-text label-1">
-                      Tomatoes, green bell pepper, sliced cucumber onion,
-                      olives, and feta cheese.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu-card hover:card">
-                <figure class="card-banner img-holder" style="--width: 100; --height: 100">
-                  <img src="./assets/images/menu-2.png" width="100" height="100" loading="lazy" alt="Lasagne"
-                    class="img-cover" />
-                </figure>
-
-                <div>
-                  <div class="title-wrapper">
-                    <h3 class="title-3">
-                      <a href="" class="card-title">Lasagne</a>
-                    </h3>
-
-                    <span class="span title-2">$40.00</span>
-
-                    <p class="card-text label-1">
-                      Vegetables, cheeses, ground meats, tomato sauce,
-                      seasonings and spices
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu-card hover:card">
-                <figure class="card-banner img-holder" style="--width: 100; --height: 100">
-                  <img src="./assets/images/menu-3.png" width="100" height="100" loading="lazy" alt="Butternut Pumpkin"
-                    class="img-cover" />
-                </figure>
-
-                <div>
-                  <div class="title-wrapper">
-                    <h3 class="title-3">
-                      <a href="" class="card-title">Butternut Pumpkin</a>
-                    </h3>
-
-                    <span class="span title-2">$10.00</span>
-
-                    <p class="card-text label-1">
-                      Vegetables, cheeses, ground meats, tomato sauce,
-                      seasonings and spices
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu-card hover:card">
-                <figure class="card-banner img-holder" style="--width: 100; --height: 100">
-                  <img src="./assets/images/menu-4.png" width="100" height="100" loading="lazy" alt="Tokusen Wagyu"
-                    class="img-cover" />
-                </figure>
-
-                <div>
-                  <div class="title-wrapper">
-                    <h3 class="title-3">
-                      <a href="" class="card-title">Tokusen Wagyu</a>
-                    </h3>
-
-                    <span class="badge label-1">New</span>
-
-                    <span class="span title-2">$39.00</span>
-
-                    <p class="card-text label-1">
-                      Vegetables, cheeses, ground meats, tomato sauce,
-                      seasonings and spices.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu-card hover:card">
-                <figure class="card-banner img-holder" style="--width: 100; --height: 100">
-                  <img src="./assets/images/menu-5.png" width="100" height="100" loading="lazy" alt="Olivas Rellenas"
-                    class="img-cover" />
-                </figure>
-
-                <div>
-                  <div class="title-wrapper">
-                    <h3 class="title-3">
-                      <a href="" class="card-title">Olivas Rellenas</a>
-                    </h3>
-
-                    <span class="span title-2">$25.00</span>
-
-                    <p class="card-text label-1">
-                      Vegetables, cheeses, ground meats, tomato sauce,
-                      seasonings and spices.
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </li>
-
-            <li>
-              <div class="menu-card hover:card">
-                <figure class="card-banner img-holder" style="--width: 100; --height: 100">
-                  <img src="./assets/images/menu-6.png" width="100" height="100" loading="lazy" alt="Opu Fish"
-                    class="img-cover" />
-                </figure>
-
-                <div>
-                  <div class="title-wrapper">
-                    <h3 class="title-3">
-                      <a href="" class="card-title">Opu Fish</a>
-                    </h3>
-
-                    <span class="span title-2">$49.00</span>
-
-                    <p class="card-text label-1">
-                      Vegetables, cheeses, ground meats, tomato sauce,
-                      seasonings and spices
-                    </p>
-                  </div>
-                </div>
-              </div>
-            </li>
-          </ul>
+          <ul class="grid-list"></ul>
 
           <p class="menu-text text-center">
             During winter daily from
