--- a/public/reservation.html
+++ b/public/reservation.html
@@ -1,168 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Restaurant Table Reservation</title>
+    <meta name="title" content="Restaurant France - Table Reservation" />
+    <meta name="description" content="Restaurant table reservation system" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Restaurant Table Reservation</title>
-  <meta name="title" content="Restaurant France - Table Reservation" />
-  <meta name="description" content="Restaurant table reservation system" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
 
-  <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./assets/css/restaurant-styles.css" />
 
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Forum&display=swap"
-    rel="stylesheet" />
-  <link rel="stylesheet" href="./assets/css/restaurant-styles.css" />
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+  </head>
 
-  <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-  <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-</head>
-
-<body>
-  <header class="header">
-    <div class="container">
-      <div class="logo-container">
-        <a href="./index.html">
-          <img src="./assets/images/logo.svg" alt="Grill Restaurant" class="auth-logo" />
-        </a>
-      </div>
-      <h1 class="title">Restaurant Table Reservation</h1>
-    </div>
-  </header>
-
-  <main>
-    <section class="reservation-section">
+  <body>
+    <header class="header">
       <div class="container">
-        <p class="section-subtitle">Select Your Table</p>
-        <h2 class="section-title">Restaurant Floor Plan</h2>
-
-        <div id="table-grid"></div>
-      </div>
-    </section>
-  </main>
-
-  <!-- Reservation Form Modal -->
-  <div class="form-modal">
-
-    <div class="modal-content">
-      <div class="modal-header">
-        <h2 class="modal-title">Reservation Details</h2>
-        <button class="close-btn" id="closeReservationModal">&times;</button>
-      </div>
-      <div class="modal-body">
-        <div class="table-info" id="tableInfo">
-          <!-- Table info will be inserted here -->
-
+        <div class="logo-container">
+          <a href="./index.html">
+            <img
+              src="./assets/images/logo.svg"
+              alt="Grill Restaurant"
+              class="auth-logo"
+            />
+          </a>
         </div>
+        <h1 class="title">Restaurant Table Reservation</h1>
+      </div>
+    </header>
 
-        <form id="reservationForm">
-          <div class="form-grid">
-            <div class="form-group">
-              <label for="table">Chọn Bàn</label>
-              <select id="table" name="table" required>
-                <option value="">-- Chọn bàn --</option>
-                <!-- Table options will be inserted here -->
-              </select>
-            </div>
+    <main>
+      <section class="reservation-section">
+        <div class="container">
+          <p class="section-subtitle">Select Your Table</p>
+          <h2 class="section-title">Restaurant Floor Plan</h2>
 
-            <div class="form-group">
-              <label for="name">Họ và tên</label>
-              <input type="text" id="name" name="name" required />
-            </div>
+          <div id="table-grid"></div>
+        </div>
+      </section>
+    </main>
 
-            <div class="form-group">
-              <label for="phone">Phone Number</label>
-              <input type="tel" id="phone" name="phone" required />
-            </div>
+    <!-- Reservation Form Modal -->
+    <div class="form-modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Reservation Details</h2>
+          <button class="close-btn" id="closeReservationModal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="table-info" id="tableInfo">
+            <!-- Table info will be inserted here -->
+          </div>
 
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" id="email" name="email" required />
-            </div>
+          <form id="reservationForm">
+            <div class="form-grid">
+              <div class="form-group">
+                <label for="table">Chọn Bàn</label>
+                <select id="table" name="table" required>
+                  <option value="">-- Chọn bàn --</option>
+                  <!-- Table options will be inserted here -->
+                </select>
+              </div>
 
-            <div class="form-group">
-              <label for="guests">Number of Guests</label>
-              <input type="number" id="guests" name="guests" min="1" required />
-            </div>
+              <div class="form-group">
+                <label for="name">Họ và tên</label>
+                <input type="text" id="name" name="name" required />
+              </div>
 
-            <div class="form-group">
-              <label for="date">Date</label>
-              <input type="date" id="date" name="date" required />
-            </div>
+              <div class="form-group">
+                <label for="phone">Phone Number</label>
+                <input type="tel" id="phone" name="phone" required />
+              </div>
 
-            <div class="form-group">
-              <label for="time">Time</label>
-              <input type="time" id="time" name="time" required />
-            </div>
-            <div class="form-group">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required />
+              </div>
+
+              <div class="form-group">
+                <label for="guests">Number of Guests</label>
+                <input
+                  type="number"
+                  id="guests"
+                  name="guests"
+                  min="1"
+                  required
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="date">Date</label>
+                <input type="date" id="date" name="date" required />
+              </div>
+
+              <div class="form-group">
+                <label for="time">Time</label>
+                <input type="time" id="time" name="time" required />
+              </div>
+              <!-- <div class="form-group">
               <label for="duration">Thời gian đặt bàn</label>
               <input type="number" id="duration" name="reservation_time" min="1" required />
+            </div> -->
+            </div>
+
+            <div class="form-group">
+              <label for="notes">Special Requests</label>
+              <textarea id="notes" name="notes" rows="3"></textarea>
+            </div>
+
+            <div class="deposit-info">
+              <h3>Deposit Information</h3>
+              <p>
+                A deposit of 30% is required to secure your reservation. This
+                amount will be deducted from your final bill.
+              </p>
+              <div class="deposit-amount">Deposit Amount: 200,000 VND</div>
+            </div>
+
+            <button type="submit" class="submit-btn">Proceed to Payment</button>
+          </form>
+        </div>
+      </div>
+    </div>
+
+    <!-- Payment Modal -->
+    <div class="modal" id="paymentModal">
+      <div class="modal-content payment-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Payment Details</h2>
+          <button class="close-btn" id="closePaymentModal">&times;</button>
+        </div>
+        <div class="modal-body">
+          <div class="payment-info">
+            <p>Please transfer the deposit amount to secure your reservation</p>
+            <div class="payment-amount">200,000 VND</div>
+
+            <div class="qr-code">
+              <div class="qr-placeholder">QR Code</div>
+            </div>
+
+            <div class="bank-info">
+              <h3>Bank Information</h3>
+              <ul>
+                <li><span>Bank:</span> Techcombank</li>
+                <li><span>Account Name:</span> Restaurant Name</li>
+                <li><span>Account Number:</span> 19036789456</li>
+                <li>
+                  <span>Reference:</span> <span id="paymentReference"></span>
+                </li>
+              </ul>
             </div>
           </div>
 
-          <div class="form-group">
-            <label for="notes">Special Requests</label>
-            <textarea id="notes" name="notes" rows="3"></textarea>
+          <div class="payment-actions">
+            <button class="submit-btn" id="completePayment">
+              I've Completed the Payment
+            </button>
+            <button class="cancel-btn" id="cancelPayment">Cancel</button>
           </div>
-
-          <div class="deposit-info">
-            <h3>Deposit Information</h3>
-            <p>
-              A deposit of 30% is required to secure your reservation. This
-              amount will be deducted from your final bill.
-            </p>
-            <div class="deposit-amount">Deposit Amount: 200,000 VND</div>
-          </div>
-
-          <button type="submit" class="submit-btn">Proceed to Payment</button>
-        </form>
-      </div>
-    </div>
-  </div>
-
-  <!-- Payment Modal -->
-  <div class="modal" id="paymentModal">
-    <div class="modal-content payment-content">
-      <div class="modal-header">
-        <h2 class="modal-title">Payment Details</h2>
-        <button class="close-btn" id="closePaymentModal">&times;</button>
-      </div>
-      <div class="modal-body">
-        <div class="payment-info">
-          <p>Please transfer the deposit amount to secure your reservation</p>
-          <div class="payment-amount">200,000 VND</div>
-
-          <div class="qr-code">
-            <div class="qr-placeholder">QR Code</div>
-          </div>
-
-          <div class="bank-info">
-            <h3>Bank Information</h3>
-            <ul>
-              <li><span>Bank:</span> Techcombank</li>
-              <li><span>Account Name:</span> Restaurant Name</li>
-              <li><span>Account Number:</span> 19036789456</li>
-              <li>
-                <span>Reference:</span> <span id="paymentReference"></span>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="payment-actions">
-          <button class="submit-btn" id="completePayment">
-            I've Completed the Payment
-          </button>
-          <button class="cancel-btn" id="cancelPayment">Cancel</button>
         </div>
       </div>
     </div>
-  </div>
 
-  <script src="./assets/js/restaurant-script.js"></script>
-</body>
-
+    <script src="./assets/js/restaurant-script.js"></script>
+  </body>
 </html>
